// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main page 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--FlushPageDataLoading-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`main page 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <a class=\\"project-card\\" href=\\"projects/2\\"><span class=\\"name\\">Test2</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
